[package]
name = "base64-serde"
version = "0.5.0"
description = "Integration between rust-base64 and serde"
authors = ["Marshall Pierce <marshall@mpierce.org>"]
homepage = "https://github.com/marshallpierce/base64-serde"
repository = "https://github.com/marshallpierce/base64-serde"
documentation = "https://docs.rs/base64-serde/"
readme = 'README.md'
keywords = ["base64", "serde"]
categories = ["encoding"]
license-file = "LICENSE.txt"

[dependencies]
base64 = "0.12.0"
serde = "1.0.104"

[dev-dependencies]
serde_derive = "1.0.104"
serde_json = "1.0.48"
