[package]
name = "base64-serde"
version = "0.6.1"
description = "Integration between rust-base64 and serde"
authors = ["Marshall Pierce <marshall@mpierce.org>"]
homepage = "https://github.com/marshallpierce/base64-serde"
repository = "https://github.com/marshallpierce/base64-serde"
documentation = "https://docs.rs/base64-serde/"
readme = 'README.md'
keywords = ["base64", "serde"]
categories = ["encoding"]
# Dual licensed COIL 0.5 and Apache 2.0, but Cargo doesn't know how to represent that
license = "Apache-2.0"

[dependencies]
base64 = "0.13.0"
serde = "1.0.116"

[dev-dependencies]
serde_derive = "1.0.104"
serde_json = "1.0.48"
