[package]
name = "base64-serde"
version = "0.7.0"
description = "Integration between rust-base64 and serde"
authors = ["Marshall Pierce <marshall@mpierce.org>"]
homepage = "https://github.com/marshallpierce/base64-serde"
repository = "https://github.com/marshallpierce/base64-serde"
documentation = "https://docs.rs/base64-serde/"
readme = 'README.md'
keywords = ["base64", "serde"]
categories = ["encoding"]
# Dual licensed COIL 0.6 and Apache 2.0, but Cargo doesn't know how to represent that
license = "Apache-2.0"
rust-version = "1.57.0"
edition = "2021"

[dependencies]
base64 = "0.21.0"
serde = "1.0.152"

[dev-dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
